# medbook-userservice

./: .env-example  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  docker-compose.yaml
.github/workflows/: 01-deploy-image.yaml  01-docker-publish.yaml
src/: main.rs  schema.rs
src/application/: errors.rs
src/application/usecases/: admin.rs  authentication.rs  mod.rs  users.rs
src/config/: config_loader.rs  config_model.rs  stage.rs
src/domain/entities/: users.rs
src/domain/repositories/: users.rs
src/domain/value_objects/: authentication_model.rs  mod.rs  roles.rs  user_model.rs  users_model.rs
src/infrastructure/: mod.rs
src/infrastructure/argon2_hashing/: mod.rs
src/infrastructure/axum_http/: api_response.rs  default_routers.rs  http_serve.rs  middleware.rs  mod.rs  swagger.rs
src/infrastructure/axum_http/routers/: authentication.rs  mod.rs  users.rs
src/infrastructure/jwt_authentication/: authentication_model.rs  jwt_model.rs  mod.rs
src/infrastructure/postgres/: mod.rs  postgres_connection.rs  postgres_migration.rs  schema.rs
src/infrastructure/postgres/migrations/2025-09-09-120058_init_database/: up.sql
src/infrastructure/postgres/repositories/: users.rs
